[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenEnv-Debugger"
version = "1.0.0"
description = "Support Ticket Triage OpenEnv representation"
authors = [{name = "Vikash Saravanan"}]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "openenv-core>=0.2.0",
    "requests>=2.31.0"
]

[project.scripts]
server = "server.app:main"
